--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row justify-content-evenly text-center fs-5">
           <div class="col-md-5">
             <p>
-              Nama saya Gopi Izwalju Muammar, panggilan saya Gopi atau Ammar lahir di Ngawi, 7 September 2003, kepercayaan yang saya anut Islam. Alamat JL. Jati Bunder, Kebon Pala 3, Kebon Melatih, Tanah Abang, Jakarta Pusat.
+              Nama saya Gopi Izwalju Muammar, panggilan saya Gopi atau Ammar lahir di Ngawi, 7 September 2003, kepercayaan yang saya anut Islam. Alamat JL. Jati Bunder, Kebon Melatih, Tanah Abang, Jakarta Pusat.
             </p>
           </div>
           <div class="col-md-5">
